[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/EndLvl.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/Share/Share-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 112
use_filter = true
font_data = SubResource( 5 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "accomplished"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 1.9, 2.1, 2.3, 2.5, 2.7, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.92549, 0.537255, 0.0392157, 0 ), Color( 0.92549, 0.537255, 0.0392157, 1 ), Color( 0.92549, 0.827451, 0.0392157, 1 ), Color( 0.92549, 0.537255, 0.0392157, 1 ), Color( 0.92549, 0.827451, 0.0392157, 1 ), Color( 0.92549, 0.537255, 0.0392157, 1 ), Color( 0.92549, 0.827451, 0.0392157, 1 ), Color( 0.92549, 0.537255, 0.0392157, 1 ), Color( 0.92549, 0.827451, 0.0392157, 1 ), Color( 0.92549, 0.537255, 0.0392157, 1 ), Color( 0.92549, 0.827451, 0.0392157, 1 ), Color( 0.92549, 0.537255, 0.0392157, 1 ), Color( 0.92549, 0.827451, 0.0392157, 1 ), Color( 0.92549, 0.537255, 0.0392157, 1 ), Color( 0.92549, 0.827451, 0.0392157, 0 ) ]
}

[node name="EndLvl" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -1920.0
margin_bottom = 1080.0
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_fonts/font = SubResource( 2 )
text = "level accomplished"
align = 1
valign = 1
uppercase = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
self_modulate = Color( 0.960784, 0.945098, 0.0431373, 1 )
position = Vector2( 100, 540 )
scale = Vector2( 10, 50 )

[node name="PositionFinal" type="Position2D" parent="."]
position = Vector2( -852, 473 )

[node name="PositionExit" type="Position2D" parent="."]
position = Vector2( 296, 66 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/accomplished = SubResource( 4 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
